--- a/templates/main.html
+++ b/templates/main.html
@@ -49,16 +49,16 @@
       <div class="navcenter"></div>
       <div class="navbuttons">
         <ul>
-          <li class="menuitems" onclick="document.location='/update'">Profile</li>
+          <li class="menuitems" onclick="document.location='/update'">Edit</li>
           <li class="menuitems" onclick="document.location='/manage'">Manage</li>
-          <li class="menuitems">Info</li>
-          <li class="menuitems">Find</li>
         </ul>
       </div>
     </div>
     <!-- End menu -->
   <div class="publicannouncement">
-      <p> +++ Announcement +++ Announcement +++ Announcement +++ Announcement +++ Announcement +++ Announcement +++ Announcement +++ </p>
+      <p>
+	  +++ Announcement +++ Announcement +++ Announcement +++ Announcement +++ Announcement +++ Announcement +++ Announcement +++
+	  </p>
   </div>
   {% if session.accounts %}
 	  {% for account in session.accounts %}
